--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-qr-reader": "^2.2.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "theme-ui": "^0.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
